Renaming the user name input field
 - Fixing stylesheet to match the rename user name input field

--- a/src/resources/jamtaba.css
+++ b/src/resources/jamtaba.css
@@ -683,7 +683,7 @@ QMainWindow #bottomPanel{
     qproperty-alignment: AlignCenter;
 }
 
-.QLineEdit#labelSectionTitle:read-only
+.QLineEdit#userNameLineEdit:read-only
 {
     background-image: url(':/images/lock.png');
     background-repeat: none;
