Using a new label in ninjam room window to show the current user name
- The user name is showed: "connected as <user name>"
- The "connected as" string is translatable.

--- a/src/Common/gui/NinjamRoomWindow.ui
+++ b/src/Common/gui/NinjamRoomWindow.ui
@@ -53,7 +53,7 @@
       <widget class="QLabel" name="labelRoomName">
        <property name="sizePolicy">
         <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
-         <horstretch>1</horstretch>
+         <horstretch>0</horstretch>
          <verstretch>0</verstretch>
         </sizepolicy>
        </property>
@@ -62,6 +62,19 @@
        </property>
        <property name="text">
         <string notr="true">ninbot.com</string>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="QLabel" name="labelUserName">
+       <property name="sizePolicy">
+        <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
+         <horstretch>1</horstretch>
+         <verstretch>0</verstretch>
+        </sizepolicy>
+       </property>
+       <property name="text">
+        <string>(connected as &lt;user_name&gt;)</string>
        </property>
       </widget>
      </item>
