--- a/src/resources/jamtaba.css
+++ b/src/resources/jamtaba.css
@@ -380,7 +380,7 @@ QScrollBar::add-page:vertical, QScrollBar::sub-page:vertical, QScrollBar::add-pa
 
 /* common widgets */
 
-.QLineEdit{
+QLineEdit{
     border-radius: 3px;
     padding: 2px;
     background: #C5C5C5;
@@ -389,7 +389,7 @@ QScrollBar::add-page:vertical, QScrollBar::sub-page:vertical, QScrollBar::add-pa
 }
 
 
-.QLineEdit[enabled="false"]{
+QLineEdit[enabled="false"]{
     border-radius: 2px;
     padding: 2px;
     background: rgb(0, 0, 0, 40);
@@ -683,7 +683,7 @@ QMainWindow #bottomPanel{
     qproperty-alignment: AlignCenter;
 }
 
-.QLineEdit#userNameLineEdit:read-only
+#userNameLineEdit:read-only
 {
     background-image: url(':/images/lock.png');
     background-repeat: none;
