Creating a QLineEdit subclass to handle user name
- Moving the user name validation code for the new UserNameLineEdit class
- Moving the user name alignment code to the new UserNameLineEdit class
- Using the class UserNameLineEdit in user name dialog to share the same validation

--- a/src/Common/gui/UserNameDialog.ui
+++ b/src/Common/gui/UserNameDialog.ui
@@ -5,6 +5,14 @@
   <property name="windowModality">
    <enum>Qt::WindowModal</enum>
   </property>
+  <property name="geometry">
+   <rect>
+    <x>0</x>
+    <y>0</y>
+    <width>300</width>
+    <height>140</height>
+   </rect>
+  </property>
   <property name="sizePolicy">
    <sizepolicy hsizetype="Minimum" vsizetype="Preferred">
     <horstretch>0</horstretch>
@@ -59,7 +67,7 @@
     </widget>
    </item>
    <item>
-    <widget class="QLineEdit" name="lineEdit">
+    <widget class="UserNameLineEdit" name="lineEdit">
      <property name="accessibleDescription">
       <string>Type your user name here</string>
      </property>
@@ -80,6 +88,13 @@
    </item>
   </layout>
  </widget>
+ <customwidgets>
+  <customwidget>
+   <class>UserNameLineEdit</class>
+   <extends>QLineEdit</extends>
+   <header>UserNameLineEdit.h</header>
+  </customwidget>
+ </customwidgets>
  <resources/>
  <connections>
   <connection>
