--- a/src/Common/gui/MainWindow.ui
+++ b/src/Common/gui/MainWindow.ui
@@ -364,7 +364,7 @@
            <number>0</number>
           </property>
           <item>
-           <widget class="QLineEdit" name="userNameLineEdit">
+           <widget class="UserNameLineEdit" name="userNameLineEdit">
             <property name="sizePolicy">
              <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
               <horstretch>1</horstretch>
@@ -620,6 +620,11 @@
    <extends>QTabWidget</extends>
    <header>CustomTabWidget.h</header>
    <container>1</container>
+  </customwidget>
+  <customwidget>
+   <class>UserNameLineEdit</class>
+   <extends>QLineEdit</extends>
+   <header>UserNameLineEdit.h</header>
   </customwidget>
  </customwidgets>
  <resources>
