Fixing the bug in user name line edit when local tracks are collapsed
 - fixed the bug when collapsing
 - reducing the layout spacing between user name field and collapse button
 - Fixing the bug in "mini mode" local tracks layout initialization

 - The old code was setting the 'mini mode' status before the local tracks are created. So the mini mode try iterate in local tracks to reduce this tracks width but there's no tracks at all, these tracks are not created yet. The problem was the use of QTimer to call 'initializeLocalInputChannels()'. Use the QTimer is nice because without this the JamTaba GUI will not open when we have a lot of heavy plugins to load.

- The solution is just put the creation of local tracks and the setting of 'mini' or 'full view' mode inside a function and call this function using QTimer. So, both creation and layout changing are executed in the correct order.

--- a/src/Common/gui/MainWindow.ui
+++ b/src/Common/gui/MainWindow.ui
@@ -114,7 +114,7 @@
                <rect>
                 <x>0</x>
                 <y>0</y>
-                <width>681</width>
+                <width>687</width>
                 <height>301</height>
                </rect>
               </property>
@@ -351,6 +351,9 @@
           </sizepolicy>
          </property>
          <layout class="QHBoxLayout" name="horizontalLayout_2">
+          <property name="spacing">
+           <number>0</number>
+          </property>
           <property name="leftMargin">
            <number>0</number>
           </property>
