--- a/src/resources/jamtaba.css
+++ b/src/resources/jamtaba.css
@@ -1388,26 +1388,36 @@ ChatPanel QPushButton#buttonAutoTranslate{
     border: 1px solid #919191;
 }
 
-ChatMessagePanel #labelUserName{
-    padding: 0px;
-    padding-right: 2px;
-    border: 1px solid rgb(0, 0, 0, 40);
-    border-right: none;
-    border-radius: 2px;
-    border-top-right-radius: 0px;
-    border-bottom-right-radius: 0px;
-    font-size: 10px;
-    margin-top: 2px;
-    margin-bottom: 2px;
-    margin-right: 0px;
-    margin-left: 0px;
-}
-
-ChatMessagePanel #labelMessage{
-    padding: 2px;
+ChatMessagePanel #labelUserName,
+ChatMessagePanel #messageContent
+{
     border: 1px solid rgb(0, 0, 0, 80);
     border-radius: 2px;
-    min-height: 16px;
+}
+
+ChatMessagePanel #labelMessage
+{
+    margin: 1px;
+}
+
+ChatMessagePanel #labelTimeStamp{
+    font-size: 9px;
+    font-style: italic;
+    margin: 2px;
+}
+
+ChatMessagePanel #labelUserName{
+    border-bottom: none;
+    border-bottom-right-radius: 0px;
+
+    font-size: 10px;
+    font-weight: bold;
+}
+
+ChatMessagePanel #messageContent{
+    border-top-right-radius: 0px;
+    border-top-left-radius: 0px;
+    border-top: none;
 }
 
 ChatMessagePanel #translateButton{
