Removing the too much "you"s fix #320
 - Changing the texts to remove "you"s.
 - Using a placeholder text for instrument field.
 - Fixing a small unaligned layout in ninjam window in mini mode.

--- a/src/Common/gui/MainWindow.ui
+++ b/src/Common/gui/MainWindow.ui
@@ -404,8 +404,11 @@
             <property name="text">
              <string notr="true"/>
             </property>
+            <property name="alignment">
+             <set>Qt::AlignCenter</set>
+            </property>
             <property name="placeholderText">
-             <string>type your name</string>
+             <string>user name here</string>
             </property>
            </widget>
           </item>
