Adding German translation

--- a/src/resources/jamtaba.qrc
+++ b/src/resources/jamtaba.qrc
@@ -9,6 +9,7 @@
         <file alias="pt_BR.qm">../../translations/pt_BR.qm</file>
         <file alias="es_CL.qm">../../translations/es_CL.qm</file>
         <file alias="fr_FR.qm">../../translations/fr_FR.qm</file>
+        <file alias="de_DE.qm">../../translations/de_DE.qm</file>
     </qresource>
     <qresource prefix="/images">
         <file>check.png</file>
