Fixing ninjam comboboxes text cropping when translating fix #342
 - Setting comboboxes to AdjustToContent. The default value in QComboBox is AdjustToContentInFirstShow. This option don't work for translatable applications because the combobox content will change when another language is selected by user.

 - Stretching the shape combobox list items to show all strings without ellide.

--- a/src/Common/gui/NinjamPanel.ui
+++ b/src/Common/gui/NinjamPanel.ui
@@ -384,6 +384,9 @@
            <property name="accessibleDescription">
             <string>Change the shape here</string>
            </property>
+           <property name="sizeAdjustPolicy">
+            <enum>QComboBox::AdjustToContents</enum>
+           </property>
           </widget>
          </item>
          <item row="3" column="0">
@@ -397,6 +400,9 @@
           <widget class="QComboBox" name="comboBeatsPerAccent">
            <property name="accessibleDescription">
             <string>Change the accent here</string>
+           </property>
+           <property name="sizeAdjustPolicy">
+            <enum>QComboBox::AdjustToContents</enum>
            </property>
           </widget>
          </item>
